2008-11-04  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildPatchApplyMaybe): Check
	content of done-patch.tmp in more detail. The old cygbuild
	versions did not record PATH names. Offer support for
	backward compatibility in case of 'unpatch' so that that
	both 'path/file.patch' and 'file.patch' records are removed.
	(CygbuildIsCplusplusPackage): Add 'g++' check for Makefiles.

2008-10-24  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCmdFixFilesReadme):
	Rewrite logid. Remove else.
	(CygbuildCmdFixFilesAnnounce): New.

	* etc/lib/cygbuild.pl (ReadmeFix): Before file write, check
	length of $orig, not $file.
	(UpdateAnnouncement): New.
	(TestDriverUpdateAnnouncement): New.

2008-08-21  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl (UpdatePackageTags): Change
	placeholder text to '$placeholder'

2008-08-20  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildDllToLibName): Correct 'cyg'
	prefix handling. Add zlib special case.
	(CygbuildDefineVersionVariables): Improve error message.
	(CygbuildInstallCygwinPartMain): Improve error message.
	(CygbuildFilePackageGuessMain): New variable 'ext'. Rewrite
	archive extension regexp.
	(top level::CYGBUILD_SRCPKG_URL): Change to use
	mirrors.eu.kernel.org

2008-08-20  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: (HELP::Patch management
	commands::patch/unpatch): Document that *.patch files are sorted.

	* etc/lib/libcheck.sh: (CygbuildCmdInstallCheckBinFiles): Remove
	*.pyc.

	* bin/cygbuild.sh:
	(CygbuildDefineGlobalCommand): Improve error messages.
	(CygbuildCmdDownloadUpstream): Announce mywebget.pl URL
	is program was not found. Drop *.pl extension. Improve
	error message if CYGWIN-PATCHES/ not found.

2008-05-08  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildInstallFixInterpreterGeneric):
	Handle '/usr/bin/env interpreter' shebang lines better.

2008-03-29  Jari Aalto  <jari.aalto@cante.net>
